deploy: 7903b3b47addb958a07a05c0df51148a66881b0d

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li>Erlang: 24.2.1</li>
     <li>Operating system: Linux</li>
     <li>Available memory: 6.78 GB</li>
-    <li>CPU Information: Intel(R) Xeon(R) CPU E5-2673 v3 @ 2.40GHz</li>
+    <li>CPU Information: Intel(R) Xeon(R) Platinum 8272CL CPU @ 2.60GHz</li>
     <li>Number of Available Cores: 2</li>
   </ul>
 </article>
