Use the "concurrency testing" of erlperf
This way, we increase the number of concurrent workers from 1 to 200
every 3 seconds. This allows to get a more precise graph as we increase
the concurrency.

--- a/priv/index.html
+++ b/priv/index.html
@@ -34,7 +34,7 @@
     const labels = [];
     for (var i in workers) {
       const worker = workers[i];
-      labels.push(worker.toString() + ' workers');
+      labels.push(worker.toString());
     }
 
     const datasets = [
