--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
           crossorigin="anonymous"
           referrerpolicy="no-referrer"></script>
   <script>
-    const workers = [1, 50, 500];
+    const workers = [1, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200];
 
-    const insert_khepri_safe = [5306, 23894, 64367];
-    const insert_khepri_unsafe = [19505, 61574, 60846];
-    const insert_mnesia = [34758, 56426, 58706];
+    const insert_khepri_safe = [2477, 7625, 9078, 11901, 14877, 9616, 18193, 21265, 23568, 26785, 26896, 29706, 32257, 31476, 31050, 33544, 33056, 35417, 30285, 35915, 36895];
+    const insert_khepri_unsafe = [10888, 26182, 33001, 38593, 39782, 36509, 43025, 43603, 43273, 44621, 43140, 35474, 46176, 46369, 48130, 47308, 31113, 47826, 51070, 51186, 50323];
+    const insert_mnesia = [22179, 33579, 35539, 35886, 37732, 39431, 40901, 40820, 40835, 42161, 42323, 42987, 41399, 42185, 41651, 43448, 40725, 42024, 41736, 42252, 40292];
 
-    const insert_clustered_khepri_safe = [925, 4643, 7289];
-    const insert_clustered_khepri_unsafe = [1186, 4759, 6585];
-    const insert_clustered_mnesia = [2258, 5810, 6825];
+    const insert_clustered_khepri_safe = [617, 1746, 2386, 2656, 2943, 3042, 3376, 3569, 3678, 3691, 3903, 3898, 4207, 4081, 4399, 4437, 4023, 4210, 4064, 4401, 4336];
+    const insert_clustered_khepri_unsafe = [814, 2108, 2472, 2987, 3099, 3338, 3408, 3415, 3569, 3749, 3815, 3646, 3760, 3984, 3897, 3997, 4346, 4077, 4191, 4308, 4192];
+    const insert_clustered_mnesia = [1343, 2926, 3546, 3720, 3963, 4041, 4151, 4271, 4257, 4420, 4463, 4448, 4500, 4279, 4513, 4595, 4666, 4615, 4609, 4641, 4448];
 
-    const delete_khepri_safe = [6300, 33980, 99802];
-    const delete_khepri_unsafe = [25390, 85341, 93946];
-    const delete_mnesia = [36014, 55772, 57575];
+    const delete_khepri_safe = [2343, 9211, 12489, 13160, 16677, 19019, 19044, 21151, 23540, 28006, 29290, 31149, 28536, 37571, 38917, 40787, 42651, 42442, 46187, 41172, 50816];
+    const delete_khepri_unsafe = [12742, 32440, 45513, 53955, 58602, 42644, 60491, 65062, 67078, 54969, 50557, 62766, 65861, 68768, 42174, 72075, 74341, 72268, 55579, 69364, 72106];
+    const delete_mnesia = [23021, 37936, 38574, 39165, 39749, 42032, 42005, 41070, 40795, 40387, 41997, 43897, 43257, 42892, 43644, 43629, 43540, 40978, 42696, 43189, 43614];
 
-    const delete_clustered_khepri_safe = [935, 5271, 8398];
-    const delete_clustered_khepri_unsafe = [1210, 5313, 7429];
-    const delete_clustered_mnesia = [2025, 6113, 7163];
+    const delete_clustered_khepri_safe = [604, 1805, 2478, 2911, 3326, 3702, 4020, 4122, 4276, 4318, 4608, 4550, 4778, 4960, 5145, 5131, 5005, 5216, 5231, 5328, 5519];
+    const delete_clustered_khepri_unsafe = [843, 2254, 3032, 3392, 3598, 3772, 3800, 4321, 4226, 4459, 4335, 4589, 4516, 4332, 4545, 4926, 4931, 5141, 4915, 5210, 5119];
+    const delete_clustered_mnesia = [1112, 2843, 3564, 4002, 4192, 4325, 4349, 4516, 4521, 4618, 4501, 4612, 4671, 4733, 4726, 4671, 4744, 4775, 4900, 4817, 4752];
 
     const labels = [];
     for (var i in workers) {
       const worker = workers[i];
-      labels.push(worker.toString() + ' workers');
+      labels.push(worker.toString());
     }
 
     const datasets = [
