deploy: 3758994441f56b13d83b83f8dc6e179196ac5c42

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
           crossorigin="anonymous"
           referrerpolicy="no-referrer"></script>
   <script>
-    const workers = [1, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200];
+    const workers = [1, 10];
 
-    const insert_khepri_safe = [2477, 7625, 9078, 11901, 14877, 9616, 18193, 21265, 23568, 26785, 26896, 29706, 32257, 31476, 31050, 33544, 33056, 35417, 30285, 35915, 36895];
-    const insert_khepri_unsafe = [10888, 26182, 33001, 38593, 39782, 36509, 43025, 43603, 43273, 44621, 43140, 35474, 46176, 46369, 48130, 47308, 31113, 47826, 51070, 51186, 50323];
-    const insert_mnesia = [22179, 33579, 35539, 35886, 37732, 39431, 40901, 40820, 40835, 42161, 42323, 42987, 41399, 42185, 41651, 43448, 40725, 42024, 41736, 42252, 40292];
+    const insert_khepri_safe = [2557, 10778];
+    const insert_khepri_unsafe = [20106, 38142];
+    const insert_mnesia = [36612, 48478];
 
-    const insert_clustered_khepri_safe = [617, 1746, 2386, 2656, 2943, 3042, 3376, 3569, 3678, 3691, 3903, 3898, 4207, 4081, 4399, 4437, 4023, 4210, 4064, 4401, 4336];
-    const insert_clustered_khepri_unsafe = [814, 2108, 2472, 2987, 3099, 3338, 3408, 3415, 3569, 3749, 3815, 3646, 3760, 3984, 3897, 3997, 4346, 4077, 4191, 4308, 4192];
-    const insert_clustered_mnesia = [1343, 2926, 3546, 3720, 3963, 4041, 4151, 4271, 4257, 4420, 4463, 4448, 4500, 4279, 4513, 4595, 4666, 4615, 4609, 4641, 4448];
+    const insert_clustered_khepri_safe = [1042, 2492];
+    const insert_clustered_khepri_unsafe = [1456, 2844];
+    const insert_clustered_mnesia = [2430, 4293];
 
-    const delete_khepri_safe = [2343, 9211, 12489, 13160, 16677, 19019, 19044, 21151, 23540, 28006, 29290, 31149, 28536, 37571, 38917, 40787, 42651, 42442, 46187, 41172, 50816];
-    const delete_khepri_unsafe = [12742, 32440, 45513, 53955, 58602, 42644, 60491, 65062, 67078, 54969, 50557, 62766, 65861, 68768, 42174, 72075, 74341, 72268, 55579, 69364, 72106];
-    const delete_mnesia = [23021, 37936, 38574, 39165, 39749, 42032, 42005, 41070, 40795, 40387, 41997, 43897, 43257, 42892, 43644, 43629, 43540, 40978, 42696, 43189, 43614];
+    const delete_khepri_safe = [3978, 13460];
+    const delete_khepri_unsafe = [29345, 54195];
+    const delete_mnesia = [38424, 53391];
 
-    const delete_clustered_khepri_safe = [604, 1805, 2478, 2911, 3326, 3702, 4020, 4122, 4276, 4318, 4608, 4550, 4778, 4960, 5145, 5131, 5005, 5216, 5231, 5328, 5519];
-    const delete_clustered_khepri_unsafe = [843, 2254, 3032, 3392, 3598, 3772, 3800, 4321, 4226, 4459, 4335, 4589, 4516, 4332, 4545, 4926, 4931, 5141, 4915, 5210, 5119];
-    const delete_clustered_mnesia = [1112, 2843, 3564, 4002, 4192, 4325, 4349, 4516, 4521, 4618, 4501, 4612, 4671, 4733, 4726, 4671, 4744, 4775, 4900, 4817, 4752];
+    const delete_clustered_khepri_safe = [989, 2759];
+    const delete_clustered_khepri_unsafe = [1479, 3077];
+    const delete_clustered_mnesia = [1945, 4278];
 
     const labels = [];
     for (var i in workers) {
@@ -162,6 +162,32 @@
 <body>
   <div class="container mx-auto mt-4">
     <h1 class="text-5xl font-bold text-center mb-16">Khepri benchmark</h1>
+
+    <div class="max-w-max mb-16 mx-auto border border-gray-400 rounded flex py-4">
+        <div class="w-16 my-auto mx-4 text-center overflow-hidden flex-none">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 426 426" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 426 426">
+                <g>
+                <path d="M416,176.619c5.523,0,10-4.477,10-10s-4.477-10-10-10h-49.152v-26.381H416c5.523,0,10-4.477,10-10s-4.477-10-10-10h-49.152   V69.152c0-5.523-4.477-10-10-10h-41.086V10c0-5.523-4.477-10-10-10s-10,4.477-10,10v49.152H269.38V10c0-5.523-4.477-10-10-10   s-10,4.477-10,10v49.152H223V10c0-5.523-4.477-10-10-10s-10,4.477-10,10v49.152h-26.381V10c0-5.523-4.477-10-10-10s-10,4.477-10,10   v49.152h-26.381V10c0-5.523-4.477-10-10-10s-10,4.477-10,10v49.152H69.152c-5.523,0-10,4.477-10,10v41.086H10   c-5.523,0-10,4.477-10,10s4.477,10,10,10h49.152v26.381H10c-5.523,0-10,4.477-10,10s4.477,10,10,10h49.152V203H10   c-5.523,0-10,4.477-10,10s4.477,10,10,10h49.152v26.381H10c-5.523,0-10,4.477-10,10s4.477,10,10,10h49.152v26.381H10   c-5.523,0-10,4.477-10,10s4.477,10,10,10h49.152v41.086c0,5.523,4.477,10,10,10h41.086V416c0,5.523,4.477,10,10,10s10-4.477,10-10   v-49.152h26.381V416c0,5.523,4.477,10,10,10s10-4.477,10-10v-49.152H203V416c0,5.523,4.477,10,10,10s10-4.477,10-10v-49.152h26.38   V416c0,5.523,4.477,10,10,10s10-4.477,10-10v-49.152h26.381V416c0,5.523,4.477,10,10,10s10-4.477,10-10v-49.152h41.086   c5.523,0,10-4.477,10-10v-41.086H416c5.523,0,10-4.477,10-10s-4.477-10-10-10h-49.152v-26.381H416c5.523,0,10-4.477,10-10   s-4.477-10-10-10h-49.152V223H416c5.523,0,10-4.477,10-10s-4.477-10-10-10h-49.152v-26.381H416z M346.848,203h-8.821   c-5.523,0-10,4.477-10,10s4.477,10,10,10h8.821v26.381h-8.821c-5.523,0-10,4.477-10,10s4.477,10,10,10h8.821v26.381h-8.821   c-5.523,0-10,4.477-10,10s4.477,10,10,10h8.821v31.086h-31.086v-8.821c0-5.523-4.477-10-10-10s-10,4.477-10,10v8.821H269.38v-8.821   c0-5.523-4.477-10-10-10s-10,4.477-10,10v8.821H223v-8.821c0-5.523-4.477-10-10-10s-10,4.477-10,10v8.821h-26.381v-8.821   c0-5.523-4.477-10-10-10s-10,4.477-10,10v8.821h-26.381v-8.821c0-5.523-4.477-10-10-10s-10,4.477-10,10v8.821H79.152v-31.086h8.821   c5.523,0,10-4.477,10-10s-4.477-10-10-10h-8.821v-26.381h8.821c5.523,0,10-4.477,10-10s-4.477-10-10-10h-8.821V223h8.821   c5.523,0,10-4.477,10-10s-4.477-10-10-10h-8.821v-26.381h8.821c5.523,0,10-4.477,10-10s-4.477-10-10-10h-8.821v-26.381h8.821   c5.523,0,10-4.477,10-10s-4.477-10-10-10h-8.821V79.152h31.086v8.821c0,5.523,4.477,10,10,10s10-4.477,10-10v-8.821h26.381v8.821   c0,5.523,4.477,10,10,10s10-4.477,10-10v-8.821H203v8.821c0,5.523,4.477,10,10,10s10-4.477,10-10v-8.821h26.38v8.821   c0,5.523,4.477,10,10,10s10-4.477,10-10v-8.821h26.381v8.821c0,5.523,4.477,10,10,10s10-4.477,10-10v-8.821h31.086v31.086h-8.821   c-5.523,0-10,4.477-10,10s4.477,10,10,10h8.821v26.381h-8.821c-5.523,0-10,4.477-10,10s4.477,10,10,10h8.821V203z"/>
+                <path d="m266.774,149.225h-107.549c-5.523,0-10,4.477-10,10v107.55c0,5.523 4.477,10 10,10h107.549c5.523,0 10-4.477 10-10v-107.55c0-5.523-4.477-10-10-10zm-10,107.55h-87.549v-87.55h87.549v87.55z"/>
+                </g>
+            </svg>
+        </div>
+        <div class="bg-white flex flex-col justify-between leading-normal mr-4">
+            <div class="">
+                <div class="text-gray-900 font-bold text-xl mb-2">
+                    System information
+                </div>
+                <ul class="text-gray-700 text-base">
+                    <li>OS: Linux</li>
+                    <li>CPU: Intel(R) Xeon(R) Platinum 8370C CPU @ 2.80GHz</li>
+                    <li>Number of cores: 2</li>
+                    <li>Memory: 7 GiB</li>
+                    <li>Erlang: 24.2.2</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <div class="flex flex-wrap gap-x-4 gap-y-32">
       <div class="w-5/12 h-96 flex-1">
         <h2 class="text-2xl font-bold text-center mb-6">Inserts (unclustered)</h2>
