--- a/priv/index.html
+++ b/priv/index.html
@@ -188,8 +188,8 @@
         </div>
     </div>
 
-    <div class="flex flex-wrap gap-x-4 gap-y-32">
-      <div class="w-5/12 h-96 flex-1">
+    <div class="flex flex-wrap justify-center gap-x-4 gap-y-32">
+      <div class="xl:w-5/12 max-w-screen-md h-96 flex-1">
         <h2 class="text-2xl font-bold text-center mb-6">Inserts (unclustered)</h2>
         <canvas id="insert_chart"></canvas>
         <script>
@@ -197,7 +197,7 @@
           const insert_chart = new Chart(insert_ctx, insert_config);
         </script>
       </div>
-      <div class="w-5/12 h-96 flex-1">
+      <div class="xl:w-5/12 max-w-screen-md h-96 flex-1">
         <h2 class="text-2xl font-bold text-center mb-6">Inserts (3-node cluster)</h2>
         <canvas id="insert_clustered_chart"></canvas>
         <script>
@@ -205,7 +205,7 @@
           const insert_clustered_chart = new Chart(insert_clustered_ctx, insert_clustered_config);
         </script>
       </div>
-      <div class="w-5/12 h-96 flex-1">
+      <div class="xl:w-5/12 max-w-screen-md h-96 flex-1">
         <h2 class="text-2xl font-bold text-center mb-6">Deletes (unclustered)</h2>
         <canvas id="delete_chart"></canvas>
         <script>
@@ -213,7 +213,7 @@
           const delete_chart = new Chart(delete_ctx, delete_config);
         </script>
       </div>
-      <div class="w-5/12 h-96 flex-1">
+      <div class="xl:w-5/12 max-w-screen-md h-96 flex-1">
         <h2 class="text-2xl font-bold text-center mb-6">Deletes (3-node cluster)</h2>
         <canvas id="delete_clustered_chart"></canvas>
         <script>
