--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
   <script>
     const workers = [1, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200];
 
-    const insert_khepri_safe = [1688, 6694, 9130, 10618, 11001, 14827, 16428, 18352, 21324, 20612, 24393, 25652, 24763, 27525, 30869, 30857, 31015, 33071, 34342, 32744, 28861];
-    const insert_khepri_unsafe = [9712, 23882, 31438, 36386, 37828, 40247, 41206, 23208, 43595, 45246, 46080, 45823, 45939, 24165, 48256, 47661, 48577, 48657, 35062, 50096, 49326];
-    const insert_mnesia = [20857, 33483, 33250, 35567, 36813, 38582, 39213, 40541, 41041, 42122, 40989, 41441, 42329, 40830, 40872, 38772, 38870, 37117, 40830, 40674, 38843];
+    const insert_khepri_safe = [2604, 10967, 12623, 16562, 17897, 14808, 20889, 25643, 27604, 34069, 36664, 42468, 37621, 39648, 42607, 36166, 43718, 49931, 46892, 50213, 45596];
+    const insert_khepri_unsafe = [20501, 37676, 43682, 48367, 35528, 49497, 53375, 54550, 54761, 34748, 55961, 55762, 56216, 56417, 31963, 56865, 57027, 57055, 56952, 46019, 58390];
+    const insert_mnesia = [35135, 46223, 46321, 47540, 47644, 49221, 52456, 54835, 52215, 52655, 54125, 55121, 53371, 52806, 54243, 53462, 54351, 53319, 54171, 56231, 54382];
 
-    const insert_clustered_khepri_safe = [594, 1770, 2323, 2698, 3021, 2937, 3334, 3461, 3402, 3802, 3904, 4105, 4083, 4184, 4338, 4406, 4265, 4177, 4356, 4698, 4808];
-    const insert_clustered_khepri_unsafe = [796, 2088, 2697, 2909, 3216, 3558, 3429, 3411, 3594, 3777, 4231, 3630, 3811, 3604, 3785, 3839, 4041, 4318, 4105, 4191, 4411];
-    const insert_clustered_mnesia = [1292, 2747, 3460, 3716, 3848, 3917, 4010, 3948, 4101, 4155, 4064, 4135, 4322, 4379, 4421, 4321, 4396, 4187, 4270, 4183, 4244];
+    const insert_clustered_khepri_safe = [903, 2364, 2968, 3347, 3728, 4068, 4328, 4426, 4608, 4895, 4905, 5277, 5488, 5241, 5002, 5435, 5531, 5671, 5617, 6104, 6243];
+    const insert_clustered_khepri_unsafe = [1389, 2788, 3522, 3950, 4320, 4462, 4794, 4796, 4758, 5037, 4812, 5055, 5330, 5246, 5196, 5309, 5126, 5790, 5371, 5504, 5393];
+    const insert_clustered_mnesia = [2377, 4226, 4952, 5186, 5471, 5608, 5776, 5783, 5891, 5991, 5871, 5881, 5934, 5914, 5866, 5918, 5944, 6033, 6167, 6115, 6146];
 
-    const delete_khepri_safe = [2391, 9481, 13088, 16378, 19244, 22749, 22120, 23450, 24306, 27338, 25007, 29924, 31931, 42621, 38328, 44480, 44747, 48817, 44239, 51444, 44705];
-    const delete_khepri_unsafe = [10240, 29593, 41217, 49351, 46407, 51098, 48157, 53774, 54505, 53798, 55655, 30587, 58746, 62947, 62861, 61550, 34052, 65377, 64374, 65408, 63668];
-    const delete_mnesia = [21535, 36894, 37753, 37316, 37658, 40510, 38674, 41192, 41862, 41526, 42389, 41056, 42633, 41318, 42666, 43564, 42300, 42345, 43052, 43069, 42292];
+    const delete_khepri_safe = [4335, 12700, 20278, 16193, 18867, 22518, 23415, 30463, 35260, 42985, 46602, 51749, 50927, 45785, 45412, 54108, 54219, 59216, 61000, 54506, 57245];
+    const delete_khepri_unsafe = [27616, 50878, 62020, 69822, 54817, 69424, 80961, 81624, 59757, 83072, 81113, 71626, 82619, 87554, 87443, 49886, 87670, 87531, 88158, 78914, 89422];
+    const delete_mnesia = [35929, 49623, 49848, 50479, 49691, 50439, 51662, 53032, 51848, 54866, 54864, 55284, 58308, 55465, 55695, 56165, 57674, 56525, 55716, 55822, 58129];
 
-    const delete_clustered_khepri_safe = [558, 1840, 2499, 2970, 3119, 3531, 3906, 3970, 4157, 4424, 4494, 4499, 4623, 4609, 4680, 4899, 5213, 5057, 4961, 5233, 5461];
-    const delete_clustered_khepri_unsafe = [774, 2155, 2735, 3361, 3399, 3653, 3959, 3995, 4118, 4261, 4397, 4317, 4329, 4496, 4634, 4998, 4809, 4957, 4838, 4895, 4952];
-    const delete_clustered_mnesia = [1250, 2740, 3529, 3728, 3824, 3986, 3947, 3954, 4078, 4189, 4044, 4165, 4492, 4334, 4545, 4455, 4523, 4482, 4382, 4519, 4401];
+    const delete_clustered_khepri_safe = [1026, 2638, 3299, 3943, 4488, 4956, 5236, 5246, 5618, 6002, 6100, 6205, 5951, 6067, 6620, 6922, 6785, 7362, 7004, 7272, 7374];
+    const delete_clustered_khepri_unsafe = [1386, 2941, 3916, 4483, 4563, 5105, 5502, 5964, 5713, 5800, 6138, 5692, 5860, 6013, 6142, 6434, 6463, 6461, 6099, 6431, 6476];
+    const delete_clustered_mnesia = [1746, 4193, 5261, 5631, 5900, 5817, 5962, 6053, 6179, 6174, 6252, 6420, 6349, 6332, 6308, 6531, 6479, 6560, 6493, 6598, 6570];
 
     const labels = [];
     for (var i in workers) {
@@ -179,7 +179,7 @@
                 </div>
                 <ul class="text-gray-700 text-base">
                     <li>OS: Linux</li>
-                    <li>CPU: Intel(R) Xeon(R) CPU E5-2673 v3 @ 2.40GHz</li>
+                    <li>CPU: Intel(R) Xeon(R) Platinum 8370C CPU @ 2.80GHz</li>
                     <li>Number of cores: 2</li>
                     <li>Memory: 7 GiB</li>
                     <li>Erlang: 24.2.2</li>
@@ -188,8 +188,8 @@
         </div>
     </div>
 
-    <div class="flex flex-wrap gap-x-4 gap-y-32">
-      <div class="w-5/12 h-96 flex-1">
+    <div class="flex flex-wrap justify-center gap-x-4 gap-y-32">
+      <div class="xl:w-5/12 max-w-screen-md h-96 flex-1">
         <h2 class="text-2xl font-bold text-center mb-6">Inserts (unclustered)</h2>
         <canvas id="insert_chart"></canvas>
         <script>
@@ -197,7 +197,7 @@
           const insert_chart = new Chart(insert_ctx, insert_config);
         </script>
       </div>
-      <div class="w-5/12 h-96 flex-1">
+      <div class="xl:w-5/12 max-w-screen-md h-96 flex-1">
         <h2 class="text-2xl font-bold text-center mb-6">Inserts (3-node cluster)</h2>
         <canvas id="insert_clustered_chart"></canvas>
         <script>
@@ -205,7 +205,7 @@
           const insert_clustered_chart = new Chart(insert_clustered_ctx, insert_clustered_config);
         </script>
       </div>
-      <div class="w-5/12 h-96 flex-1">
+      <div class="xl:w-5/12 max-w-screen-md h-96 flex-1">
         <h2 class="text-2xl font-bold text-center mb-6">Deletes (unclustered)</h2>
         <canvas id="delete_chart"></canvas>
         <script>
@@ -213,7 +213,7 @@
           const delete_chart = new Chart(delete_ctx, delete_config);
         </script>
       </div>
-      <div class="w-5/12 h-96 flex-1">
+      <div class="xl:w-5/12 max-w-screen-md h-96 flex-1">
         <h2 class="text-2xl font-bold text-center mb-6">Deletes (3-node cluster)</h2>
         <canvas id="delete_clustered_chart"></canvas>
         <script>
