--- a/priv/index.html
+++ b/priv/index.html
@@ -199,7 +199,7 @@
         </script>
       </div>
       <div class="xl:w-5/12 max-w-screen-md h-96 flex-1">
-        <h2 class="text-2xl font-bold text-center mb-6">Inserts (3-node cluster)</h2>
+        <h2 class="text-2xl font-bold text-center mb-6">Inserts (%CLUSTER_SIZE%-node cluster)</h2>
         <canvas id="insert_clustered_chart"></canvas>
         <script>
           const insert_clustered_ctx = document.getElementById('insert_clustered_chart');
@@ -215,7 +215,7 @@
         </script>
       </div>
       <div class="xl:w-5/12 max-w-screen-md h-96 flex-1">
-        <h2 class="text-2xl font-bold text-center mb-6">Deletes (3-node cluster)</h2>
+        <h2 class="text-2xl font-bold text-center mb-6">Deletes (%CLUSTER_SIZE%-node cluster)</h2>
         <canvas id="delete_clustered_chart"></canvas>
         <script>
           const delete_clustered_ctx = document.getElementById('delete_clustered_chart');
