Use the new `favor` option when measuring queries
The Ra system is also configured with a WAL size of 64 MiB, like the Ra
system used in RabbitMQ for the integration of Khepri. The impact is
mostly a smaller memory footprint.

The code was refactored a lot to allow different "profiles" (rather than
`safe` and `unsafe` for everything).

Colors are updated as well in the process:
* inserts and deletes are using green
* queries are using blue

As a consequence, we don't measure queries with fsync(2) disabled
anymore. It didn't make sense anyway, we measured the same thing twice
between `safe` and `unsafe` because the disk was not involved.

--- a/priv/index.html
+++ b/priv/index.html
@@ -118,12 +118,17 @@
     };
 
     const line_colors = {
-      //khepri_safe: 'rgb(75, 192, 192)',   // Green.
-      //khepri_unsafe: 'rgb(54, 162, 235)', // Blue.
-      //mnesia: 'rgb(255, 99, 132)',        // Red.
-      khepri_safe: 'rgb(167, 201, 87)',   // Green.
-      khepri_unsafe: 'rgb(39, 125, 161)', // Blue.
-      mnesia: 'rgb(249, 65, 68)',        // Red.
+      // Green for writes.
+      khepri_safe: '#70E000',
+      khepri_unsafe: '#008000',
+
+      // Blue for reads.
+      khepri_lowlat: '#90E0EF',
+      khepri_compromise: '#00B4D8',
+      khepri_consistency: '#0077B6',
+
+      // Red for Mnesia.
+      mnesia: '#FF6384',
     };
 
     const workers = {{{workers}}};
