--- a/priv/index.html
+++ b/priv/index.html
@@ -222,7 +222,8 @@
 </head>
 <body>
   <div class="container mx-auto mt-4">
-    <h1 class="text-5xl font-bold text-center mb-16">Khepri benchmark</h1>
+    <h1 class="text-5xl font-bold text-center mb-4">Khepri benchmark</h1>
+    <p class="text-xl text-center text-gray-700 mb-16">{{datetime}}</p>
 
     <div class="max-w-max mb-16 mx-auto border border-gray-400 rounded flex py-4">
         <div class="w-16 my-auto mx-4 text-center overflow-hidden flex-none">
